Changed Class of both UIViewControllers to ViewController, added two labels, created custom classes. One through creation of a new file, changing the subclass to UIViewcontroller.

--- a/HackwichThree(redux)/Base.lproj/Main.storyboard
+++ b/HackwichThree(redux)/Base.lproj/Main.storyboard
@@ -10,13 +10,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--View Controller Two-->
         <scene sceneID="OYB-UR-c4m">
             <objects>
-                <viewController id="kEH-2O-z56" sceneMemberID="viewController">
+                <viewController id="kEH-2O-z56" customClass="ViewControllerTwo" customModule="HackwichThree_redux_" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="m5i-Vb-4CP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J6V-8A-I2p">
+                                <rect key="frame" x="166" y="178" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="NIo-pI-HYx"/>
                     </view>
@@ -29,10 +38,19 @@
         <!--View Controller-->
         <scene sceneID="3HE-bz-MCP">
             <objects>
-                <viewController id="HkS-rc-1Km" sceneMemberID="viewController">
+                <viewController id="HkS-rc-1Km" customClass="ViewController" customModule="HackwichThree_redux_" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uF6-8t-9nK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6G5-vK-HLR">
+                                <rect key="frame" x="166" y="170" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="BvE-ij-zLs"/>
                     </view>
@@ -40,7 +58,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yQD-7S-ldJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1692" y="-238"/>
+            <point key="canvasLocation" x="1692" y="-238.83058470764618"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="pY2-E9-AkJ">
