--- a/HackwichThree(redux)/Base.lproj/Main.storyboard
+++ b/HackwichThree(redux)/Base.lproj/Main.storyboard
@@ -63,11 +63,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GdS-VY-viQ">
-                                <rect key="frame" x="16" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="27" id="qHF-2u-0mx">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellReuseIdentifier" rowHeight="27" id="qHF-2u-0mx">
                                         <rect key="frame" x="0.0" y="28" width="320" height="27"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qHF-2u-0mx" id="0ch-Cv-Mn4">
@@ -228,11 +228,11 @@
             </objects>
             <point key="canvasLocation" x="1001" y="95"/>
         </scene>
-        <!--Item-->
+        <!--Bucket List-->
         <scene sceneID="WhJ-3L-eYk">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fmz-Px-DD7" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="vRw-AD-P7R"/>
+                    <tabBarItem key="tabBarItem" title="Bucket List" image="list" id="vRw-AD-P7R"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LOy-zP-Rv2">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
@@ -251,6 +251,7 @@
     <resources>
         <image name="UHWO-Logo-Stacked" width="783" height="874"/>
         <image name="about" width="30" height="30"/>
+        <image name="list" width="30" height="30"/>
         <image name="my face" width="88" height="88"/>
         <image name="sun" width="30" height="30"/>
     </resources>
